# AgenticAI_LangGraph-LangChain

./: AGENTS.md  AI_Agent_Development_Resume.md  README.md  main.py  pyproject.toml  requirements.txt
Learning/: 4.get-started-openai.ipynb  alur.md
Learning/1.data-ingestion/: intro.ipynb  notebook.ipynb  notes.md  produk.csv
Learning/2.embedding/: embeddings.ipynb
Learning/3.vectorstore/chroma_db/: chroma.sqlite3
Learning/3.vectorstore/faiss_ollama_speech/: index.pkl
Learning/LangChain/2. OpenAI-Ollama/: 2.Retrieve-Chain.ipynb
Learning/LangChain/3. LCEL/: LCEL_Chain.ipynb
Learning/LangChain/4. Conversational Memory/: RAG.ipynb  (+3 more)
Learning/LangGraph/: simpeBot.ipynb
Lecturer/Section 11-LangGraph Get Started/: 1-simplegraph.ipynb
Lecturer/Section 12-LangGraph Components/: langgraph_components_resume.md
Lecturer/Section 14-Different Workflow in LangGraph/: extract_notebooks.py
Lecturer/Section 7-LCEL/: .env.example  Dockerfile  LANGSERVE_BEST_PRACTICES.md  client.py  docker-compose.yml  nginx.conf  serve.py  simplellmLCEL.ipynb
Lecturer/Section 8 -Chatbot With History/: 1-chatbots.ipynb
Notes/: 1. Langchain-Handson.md  2.Retriever dan Chain.md  3.Retrieve_Chain_EndToEnd.md  4.Prompt_OutputParser_LCEL_Chain.md  5.Conversation_History_Management.md  6.PDF_to_PGVector_Pipeline.md  7.Conversational_RAG_Memory.md  8.Agent_Tool_Calling_Mechanism.md  9.Updated Resume with Tool Calling.md
Notes/LangGraph/: 1.langgraph_state_typeddict_annotated.md  2.langgraph_state_flow_typeddict.md
Notes/Langchain Core/: Agents.md  Messages.md  Models.md
(+13 files in other folders)
