[project]
name = "agenticai-langgraph-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
]
